добавлены стили на главную страницу

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           для вашего бизнеса
         </h1>
 
-        <a href="" class="link">Заказать услугу</a>
+        <a href="" class="button">Заказать услугу</a>
       </section>
 
       <!--Преимущества-->
@@ -94,7 +94,7 @@
       <!-- Чем мы занимаемся -->
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="services">
           <li>
             <a href="">
               <img
@@ -104,7 +104,7 @@
                 height="294"
               />
             </a>
-            <p>Десктопные приложения</p>
+            <p class="services-name">Десктопные приложения</p>
           </li>
           <li>
             <a href="">
@@ -115,7 +115,7 @@
                 height="294"
               />
             </a>
-            <p>Мобильные приложения</p>
+            <p class="services-name">Мобильные приложения</p>
           </li>
           <li>
             <a href="">
@@ -126,7 +126,7 @@
                 height="294"
               />
             </a>
-            <p>Дизайнерские решения</p>
+            <p class="services-name">Дизайнерские решения</p>
           </li>
         </ul>
       </section>
@@ -134,29 +134,29 @@
       <!-- Наша команда -->
       <section class="section">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team">
           <li>
             <img src="./images/JohnSmith.jpg" alt="Джон Смит" />
             <h3 class="section-title">John Smith</h3>
             <p>Product Designer</p>
             <ul>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/instagram1.svg" alt="Ссылка на Instagram"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/twitter1.svg" alt="Ссылка на Twitter"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/facebook1.svg" alt="Ссылка на Facebook"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/linkedin1.svg" alt="Ссылка на LinkedIn"
                 /></a>
               </li>
@@ -168,22 +168,22 @@
             <p>Frontend Developer</p>
             <ul>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/instagram1.svg" alt="Ссылка на Instagram"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/twitter1.svg" alt="Ссылка на Twitter"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/facebook1.svg" alt="Ссылка на Facebook"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/linkedin1.svg" alt="Ссылка на LinkedIn"
                 /></a>
               </li>
@@ -195,22 +195,22 @@
             <p>Marketing</p>
             <ul>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/instagram1.svg" alt="Ссылка на Instagram"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/twitter1.svg" alt="Ссылка на Twitter"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/facebook1.svg" alt="Ссылка на Facebook"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/linkedin1.svg" alt="Ссылка на LinkedIn"
                 /></a>
               </li>
@@ -222,22 +222,22 @@
             <p>UI Designer</p>
             <ul>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/instagram1.svg" alt="Ссылка на Instagram"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/twitter1.svg" alt="Ссылка на Twitter"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/facebook1.svg" alt="Ссылка на Facebook"
                 /></a>
               </li>
               <li>
-                <a href=""
+                <a href="" class="socials"
                   ><img src="./images/linkedin1.svg" alt="Ссылка на LinkedIn"
                 /></a>
               </li>
@@ -249,34 +249,34 @@
       <!-- Постоянные клиенты -->
       <section class="section">
         <h2 class="section-title">Постоянные клиенты</h2>
-        <ul>
+        <ul class="clients">
           <li>
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/logo1.svg" alt="Логотип компании 1"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/logo2.svg" alt="Логотип компании 2"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/logo3.svg" alt="Логотип компании 3"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/logo4.svg" alt="Логотип компании 4"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/logo5.svg" alt="Логотип компании 5"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/logo6.svg" alt="Логотип компании 6"
             /></a>
           </li>
@@ -284,14 +284,16 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer>
+    <footer class="footer">
       <!-- Контакты компании -->
       <div>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html" class="logo">
+          <span class="logo-blue">Web</span> Studio
+        </a>
         <address>
           г. Киев, пр-т Леси Украинки, 26
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="mailto:info@example.com" class="link">info@example.com</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </address>
       </div>
       <!-- Соцсети компании -->
@@ -299,22 +301,22 @@
         <p><strong>присоединяйтесь</strong></p>
         <ul>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/instagram2.svg" alt="Ссылка на Instagram"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/twitter2.svg" alt="Ссылка на Twitter"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/facebook2.svg" alt="Ссылка на Facebook"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/linkedin2.svg" alt="Ссылка на LinkedIn"
             /></a>
           </li>
@@ -326,7 +328,7 @@
           <strong>Подпишитесь на рассылку</strong>
         </p>
       </div>
-      <p>2020 | Developed by GoIT Students</p>
+      <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
