--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           ><span class="logo-blue">Web</span> Studio</a
         >
         <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -37,7 +37,7 @@
           для вашего бизнеса
         </h1>
 
-        <a href="" class="button">Заказать услугу</a>
+        <a href="" class="button primary">Заказать услугу</a>
       </section>
 
       <!--Преимущества-->
@@ -327,6 +327,7 @@
         <p>
           <strong>Подпишитесь на рассылку</strong>
         </p>
+        <a href="" class="button primary">Подписаться</a>
       </div>
       <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
