--- a/portfolio.html
+++ b/portfolio.html
@@ -3,70 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <title>Студия</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- шапка страницы -->
     <header>
       <nav>
-        <a href="./index.html">Web Studio</a>
-
-        <ul>
-          <li>
-            <a href="./index.html">Студия</a>
-          </li>
-          <li>
-            <a href="./portfolio.html">Портфолио</a>
-          </li>
-          <li>
-            <a href="">Контакты</a>
-          </li>
+        <a href="./index.html" class="logo"
+          ><span class="logo-blue">Web</span> Studio</a
+        >
+        <ul class="site-nav">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-
-      <ul>
+      <ul class="contacts-nav">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- Основной контен -->
     <main>
       <!-- Портфолио -->
-      <section>
-        <h1>
+      <section class="section">
+        <h1 class="section-title">
           Портфолио
         </h1>
         <!-- Фильтры -->
         <ul>
           <li>
-            <button type="button">Все</button>
+            <button type="button" class="button">Все</button>
           </li>
           <li>
-            <button type="button">Веб-сайты</button>
+            <button type="button" class="button">Веб-сайты</button>
           </li>
           <li>
-            <button type="button">Приложения</button>
+            <button type="button" class="button">Приложения</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button type="button" class="button">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button type="button" class="button">Маркетинг</button>
           </li>
         </ul>
 
         <!-- Примеры работ -->
         <ul>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/Tehnokryak.jpg" alt="Ноутбук" />
-              <h2>Технокряк</h2>
+              <h2 class="section-title">Технокряк</h2>
               <p>Веб-сайт</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -74,11 +69,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/Poster.jpg" alt="Баскетболисты" />
-              <h2>Постер New Orlean vs Golden Stars</h2>
+              <h2 class="section-title">Постер New Orlean vs Golden Stars</h2>
               <p>Дизайн</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -86,11 +81,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/Seafood.jpg" alt="Рыба" />
-              <h2>Ресторан Seafood</h2>
+              <h2 class="section-title">Ресторан Seafood</h2>
               <p>Приложение</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -98,11 +93,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/Prime.jpg" alt="Наушники" />
-              <h2>Проект Prime</h2>
+              <h2 class="section-title">Проект Prime</h2>
               <p>Маркетинг</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -110,11 +105,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/Boxes.jpg" alt="Коробки" />
-              <h2>Проект Boxes</h2>
+              <h2 class="section-title">Проект Boxes</h2>
               <p>Приложение</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -122,11 +117,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/Inspiration.jpg" alt="Монитор" />
-              <h2>Inspiration has no Borders</h2>
+              <h2 class="section-title">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -134,11 +129,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/LimitedEdition.jpg" alt="Книга" />
-              <h2>Издание Limited Edition</h2>
+              <h2 class="section-title">Издание Limited Edition</h2>
               <p>Дизайн</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -146,11 +141,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img src="./images/LAB.jpg" alt="<Бирка>" />
-              <h2>Постер New Orlean vs Golden Stars</h2>
+              <h2 class="section-title">Постер New Orlean vs Golden Stars</h2>
               <p>Маркетинг</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -158,14 +153,14 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="work-examples">
               <img
                 src="./images/GrowingBusiness.jpg"
                 alt="Печатает на ноутбуке"
               />
-              <h2>Growing Business</h2>
+              <h2 class="section-title">Growing Business</h2>
               <p>Приложение</p>
-              <p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -176,14 +171,16 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer>
+    <footer class="footer">
       <!-- Контакты компании -->
       <div>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html" class="logo">
+          <span class="logo-blue">Web</span> Studio
+        </a>
         <address>
           г. Киев, пр-т Леси Украинки, 26
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="mailto:info@example.com" class="link">info@example.com</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </address>
       </div>
       <!-- Соцсети компании -->
@@ -191,22 +188,22 @@
         <p><strong>присоединяйтесь</strong></p>
         <ul>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/instagram2.svg" alt="Ссылка на Instagram"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/twitter2.svg" alt="Ссылка на Twitter"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/facebook2.svg" alt="Ссылка на Facebook"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="" class="socials"
               ><img src="./images/linkedin2.svg" alt="Ссылка на LinkedIn"
             /></a>
           </li>
@@ -217,8 +214,9 @@
         <p>
           <strong>Подпишитесь на рассылку</strong>
         </p>
+        <a href="" class="button primary">Подписаться</a>
       </div>
-      <p>2020 | Developed by GoIT Students</p>
+      <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
