--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -138,7 +142,7 @@
           <li>
             <img src="./images/JohnSmith.jpg" alt="Джон Смит" />
             <h3 class="section-title">John Smith</h3>
-            <p>Product Designer</p>
+            <p class="position">Product Designer</p>
             <ul>
               <li>
                 <a href="" class="socials"
@@ -165,7 +169,7 @@
           <li>
             <img src="./images/MartaStewart.jpg" alt="Джон Смит" />
             <h3 class="section-title">Marta Stewart</h3>
-            <p>Frontend Developer</p>
+            <p class="position">Frontend Developer</p>
             <ul>
               <li>
                 <a href="" class="socials"
@@ -192,7 +196,7 @@
           <li>
             <img src="./images/RobertJakis.jpg" alt="Джон Смит" />
             <h3 class="section-title">Robert Jakis</h3>
-            <p>Marketing</p>
+            <p class="position">Marketing</p>
             <ul>
               <li>
                 <a href="" class="socials"
@@ -219,7 +223,7 @@
           <li>
             <img src="./images/MartinDoe.jpg" alt="Джон Смит" />
             <h3 class="section-title">Martin Doe</h3>
-            <p>UI Designer</p>
+            <p class="position">UI Designer</p>
             <ul>
               <li>
                 <a href="" class="socials"
