--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -14,8 +18,8 @@
           ><span class="logo-blue">Web</span> Studio</a
         >
         <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
@@ -32,11 +36,9 @@
     <main>
       <!-- Портфолио -->
       <section class="section">
-        <h1 class="section-title">
-          Портфолио
-        </h1>
+        <h1 class="section-title">Портфолио</h1>
         <!-- Фильтры -->
-        <ul>
+        <ul class="filters">
           <li>
             <button type="button" class="button">Все</button>
           </li>
@@ -55,11 +57,11 @@
         </ul>
 
         <!-- Примеры работ -->
-        <ul>
+        <ul class="Work Examples">
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/Tehnokryak.jpg" alt="Ноутбук" />
-              <h2 class="section-title">Технокряк</h2>
+              <h2 class="project-title">Технокряк</h2>
               <p>Веб-сайт</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -69,9 +71,9 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/Poster.jpg" alt="Баскетболисты" />
-              <h2 class="section-title">Постер New Orlean vs Golden Stars</h2>
+              <h2 class="project-title">Постер New Orlean vs Golden Stars</h2>
               <p>Дизайн</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -81,9 +83,9 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/Seafood.jpg" alt="Рыба" />
-              <h2 class="section-title">Ресторан Seafood</h2>
+              <h2 class="project-title">Ресторан Seafood</h2>
               <p>Приложение</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -93,9 +95,9 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/Prime.jpg" alt="Наушники" />
-              <h2 class="section-title">Проект Prime</h2>
+              <h2 class="project-title">Проект Prime</h2>
               <p>Маркетинг</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -105,9 +107,9 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/Boxes.jpg" alt="Коробки" />
-              <h2 class="section-title">Проект Boxes</h2>
+              <h2 class="project-title">Проект Boxes</h2>
               <p>Приложение</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -117,9 +119,9 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/Inspiration.jpg" alt="Монитор" />
-              <h2 class="section-title">Inspiration has no Borders</h2>
+              <h2 class="project-title">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -129,9 +131,9 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/LimitedEdition.jpg" alt="Книга" />
-              <h2 class="section-title">Издание Limited Edition</h2>
+              <h2 class="project-title">Издание Limited Edition</h2>
               <p>Дизайн</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -141,9 +143,9 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img src="./images/LAB.jpg" alt="<Бирка>" />
-              <h2 class="section-title">Постер New Orlean vs Golden Stars</h2>
+              <h2 class="project-title">Постер New Orlean vs Golden Stars</h2>
               <p>Маркетинг</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
@@ -153,12 +155,12 @@
             </a>
           </li>
           <li>
-            <a href="" class="work-examples">
+            <a href="" class="project">
               <img
                 src="./images/GrowingBusiness.jpg"
                 alt="Печатает на ноутбуке"
               />
-              <h2 class="section-title">Growing Business</h2>
+              <h2 class="project-title">Growing Business</h2>
               <p>Приложение</p>
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
