Добавлен Ховер и Фокус для кнопок фильтра

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         </ul>
 
         <!-- Примеры работ -->
-        <ul class="Work Examples">
+        <ul class="work-examples">
           <li>
             <a href="" class="project">
               <img src="./images/Tehnokryak.jpg" alt="Ноутбук" />
